name:                omise-hs
version:             0.1.0.0
homepage:            https://github.com/iporsut/omise-hs
author:              Weerasak Chongnguluam
maintainer:          singpor@gmail.com
category:            API
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Omise
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-conduit
                     , unordered-containers
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iporsut/omise-hs
